Lab1_MatMul/Vas_Mat_Mul-master/Vas_MatMul/x64/Debug/Vas_MatMul.log
  Compiling CUDA source file kernel.cu...
  
  C:\Users\Vasser232\Desktop\Homework(magistr)\High-performance computing\Labs\Vas_MatMul>"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.2\bin\nvcc.exe" -gencode=arch=compute_52,code=\"sm_52,compute_52\" --use-local-env -ccbin "F:\Visual_Studio\Communnity\VC\Tools\MSVC\14.37.32822\bin\HostX64\x64" -x cu   -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.2\include" -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.2\include"  -G   --keep-dir x64\Debug  -maxrregcount=0   --machine 64 --compile -cudart static  -g  -DWIN32 -DWIN64 -D_DEBUG -D_CONSOLE -D_MBCS -Xcompiler "/EHsc /W3 /nologo /Od /FS /Zi /RTC1 /MDd " -Xcompiler "/Fdx64\Debug\vc143.pdb" -o "C:\Users\Vasser232\Desktop\Homework(magistr)\High-performance computing\Labs\Vas_MatMul\x64\Debug\kernel.cu.obj" "C:\Users\Vasser232\Desktop\Homework(magistr)\High-performance computing\Labs\Vas_MatMul\kernel.cu" 
C:\Users\Vasser232\Desktop\Homework(magistr)\High-performance computing\Labs\Vas_MatMul\kernel.cu(106): error : too few arguments in function call
        matrixMultiplication << <grid, block >> > (dev_c, dev_a, dev_b, N);
                                                                         ^
  
  1 error detected in the compilation of "C:/Users/Vasser232/Desktop/Homework(magistr)/High-performance computing/Labs/Vas_MatMul/kernel.cu".
  kernel.cu
F:\Visual_Studio\Communnity\MSBuild\Microsoft\VC\v170\BuildCustomizations\CUDA 12.2.targets(799,9): error MSB3721: выход из команды ""C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.2\bin\nvcc.exe" -gencode=arch=compute_52,code=\"sm_52,compute_52\" --use-local-env -ccbin "F:\Visual_Studio\Communnity\VC\Tools\MSVC\14.37.32822\bin\HostX64\x64" -x cu   -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.2\include" -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.2\include"  -G   --keep-dir x64\Debug  -maxrregcount=0   --machine 64 --compile -cudart static  -g  -DWIN32 -DWIN64 -D_DEBUG -D_CONSOLE -D_MBCS -Xcompiler "/EHsc /W3 /nologo /Od /FS /Zi /RTC1 /MDd " -Xcompiler "/Fdx64\Debug\vc143.pdb" -o "C:\Users\Vasser232\Desktop\Homework(magistr)\High-performance computing\Labs\Vas_MatMul\x64\Debug\kernel.cu.obj" "C:\Users\Vasser232\Desktop\Homework(magistr)\High-performance computing\Labs\Vas_MatMul\kernel.cu"" с кодом "2".
